# hq

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  api-v1.md  capacity.md  compose.yml  control-api-v1.md  design.md  docker-entrypoint.sh  go.mod  go.sum  operations.md  review.md
api/: openapi-v1.yaml
api/testdata/: job-id-v1.json
cmd/hqctl/: main.go  main_test.go
cmd/shard/: main.go  main_test.go
cmd/source/: main.go  main_test.go  merge.go  merge_test.go
cmd/tracker/: main.go  main_test.go
e2e/: python_worker.py
internal/access/: token.go  token_test.go
internal/agentidentity/: file.go  file_test.go
internal/checkpointformat/: checkpoint.go
internal/checkpointrestore/: restorer.go  restorer_test.go
internal/checkpointupload/: uploader.go  uploader_test.go
internal/endpointcheck/: checker.go  checker_test.go
internal/githuboauth/: client.go  client_test.go
internal/httpapi/: json.go
internal/localadmin/: server.go  server_test.go  token.go  token_test.go
internal/objectstorage/: storage.go
internal/objectstore/: s3.go  s3_test.go
internal/projectqueuehttp/: handler.go
internal/queue/: queue.go  validate.go
internal/receiveringest/: writer.go  writer_test.go
internal/shard/: manager.go  (+1 more)
scripts/: test-e2e.sh  test-postgres.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/saveweb_hq/: __init__.py  config.py  errors.py  job.py  project_queue.py  session.py  transport.py
sdk/python/tests/: test_job.py  test_openapi.py  test_project_queue.py  test_session.py  test_transport.py
(+92 files in other folders)
