[project]
name = "saveweb-hq-sdk"
version = "0.1.0"
description = "Python worker SDK for SavewebHQ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49,<50",
]

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "saveweb_hq"

[dependency-groups]
dev = [
    "openapi-spec-validator>=0.7,<1",
    "pyyaml>=6",
    "pytest>=8",
    "ruff>=0.12",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
